<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_title">Поиск</string>
    <string name="library_title">Медиатека</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link" translatable="false">https://practicum.yandex.kz/android-developer</string>
    <string name="support_email" translatable="false">pisanyy95@gmail.com</string>
    <string name="support_mail_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_mail_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="network_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_favorites_label">Ваша медиатека пуста</string>
    <string name="empty_playlist_label">Вы не создали\nни одного плейлиста</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="new_playlist_create">Создать</string>
    <string name="no_image_toast">Изображение не выбрано</string>
    <string name="new_playlist_cancellation_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_cancellation_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="new_playlist_cancellation_positive_button">Завершить</string>
    <string name="playlist_created">Плейлист %s создан</string>
    <plurals name="playlist_tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_contains_in_playlist">Трек уже добавлен в плейлист %s</string>
    <string name="track_deletion_confirmation">Вы уверены, что хотите удалить трек из плейлиста</string>
    <string name="empty_playlist_toast">Плейлист пуст</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_deletion_confirmation">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit_playlist_title">"Редактировать</string>
    <string name="save">"Сохранить</string>
    <plurals name="playlist_duration">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
    <string name="empty_playlist">В этом плейлисте еще нет треков</string>
    <string name="delete">Удалить</string>
</resources>
