<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/toolbar_margin_bottom"
        app:title="@string/settings_title"
        app:titleTextAppearance="@style/ToolbarTitle">

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"
        android:text="@string/dark_theme"
        app:thumbTint="@color/thumb_tint_selector"
        app:trackTint="@color/track_tint_selector" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:text="@string/share"
        app:icon="@drawable/ic_share" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/support"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:text="@string/support"
        app:icon="@drawable/ic_support" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/agreement"
        style="@style/SettingsButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:text="@string/user_agreement"
        app:icon="@drawable/ic_arrow_forward" />

</LinearLayout>
