<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.PlaylistMaker.Main">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/toolbar_margin_bottom">

        <TextView
            style="@style/ToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/search_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:layout_weight="1"
        android:text="@string/search_title"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/library_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:layout_weight="1"
        android:text="@string/library_title"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/settings_button"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_button_height"
        android:layout_marginHorizontal="@dimen/main_button_horizontal_margin"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/settings_title"
        app:icon="@drawable/ic_settings" />

</LinearLayout>
