<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/toolbar_margin_bottom"
        app:navigationIcon="@drawable/ic_back"
        app:contentInsetStartWithNavigation="64dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/toolbar_title_padding_top"
        android:paddingBottom="@dimen/toolbar_title_padding_bottom"
        android:text="@string/settings_title"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/main_text_size"/>

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:backgroundTint="@color/white"
        android:text="@string/dark_theme"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/settings_text_size"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:gravity="start|center"
        android:paddingStart="16dp"
        android:paddingEnd="18dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:background="@android:color/transparent"
        android:text="@string/share"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/settings_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:gravity="start|center"
        app:icon="@drawable/ic_share"
        app:iconSize="@dimen/icon_size"
        app:iconGravity="end"
        app:iconTint="@color/aluminium_snow"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:background="@android:color/transparent"
        android:text="@string/support"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/settings_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:gravity="start|center"
        app:icon="@drawable/ic_support"
        app:iconSize="@dimen/icon_size"
        app:iconGravity="end"
        app:iconTint="@color/aluminium_snow"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_button_height"
        android:background="@android:color/transparent"
        android:text="@string/user_agreement"
        android:textColor="@color/black_russian"
        android:textSize="@dimen/settings_text_size"
        android:textAllCaps="false"
        android:fontFamily="sans-serif"
        android:letterSpacing="@dimen/button_letter_spacing"
        android:gravity="start|center"
        app:icon="@drawable/ic_arrow_forward"
        app:iconSize="@dimen/icon_size"
        app:iconGravity="end"
        app:iconTint="@color/aluminium_snow"/>

</LinearLayout>
