<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".library.ui.fragment.NewPlaylistFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="26dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ToolbarTitle">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/playlist_cover_image_view"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_new_playlist" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_name_text_input_layout"
                style="@style/NewPlaylistTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="32dp"
                android:hint="@string/playlist_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_name_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/playlist_description_text_input_layout"
                style="@style/NewPlaylistTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:hint="@string/playlist_description_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/playlist_description_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/new_playlist_create_button"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginVertical="32dp"
                android:backgroundTint="@color/new_playlist_create_button_color_selector"
                android:fontFamily="@font/ys_display_medium"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="@dimen/button_letter_spacing"
                android:text="@string/new_playlist_create"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/regular_text_size"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
