<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.ui.activity.PlayerActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:navigationIcon="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/toolbar_height">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="26dp"
                app:layout_constraintBottom_toTopOf="@id/name"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/track_artwork_player_placeholder" />

            <TextView
                android:id="@+id/name"
                style="@style/PlayerNameAndArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/cover"
                tools:text="Track name" />

            <TextView
                android:id="@+id/artist"
                style="@style/PlayerNameAndArtist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/name"
                tools:text="Artist name" />

            <ImageButton
                android:id="@+id/add_to_playlist_button"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/player_secondary_button_background"
                android:src="@drawable/ic_add_to_playlist"
                app:backgroundTint="@null"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toStartOf="@id/play_pause_button_frame"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/artist" />

            <FrameLayout
                android:id="@+id/play_pause_button_frame"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="55dp"
                android:layout_marginTop="30dp"
                app:layout_constraintEnd_toStartOf="@id/add_to_favorites_button"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
                app:layout_constraintTop_toBottomOf="@id/artist">

                <ImageButton
                    android:id="@+id/play_pause_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/play_button_background" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/add_to_favorites_button"
                android:layout_width="51dp"
                android:layout_height="51dp"
                android:layout_marginTop="54dp"
                android:background="@drawable/player_secondary_button_background"
                android:src="@drawable/ic_add_to_favorites_disabled"
                app:backgroundTint="@null"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/play_pause_button_frame"
                app:layout_constraintTop_toBottomOf="@id/artist" />

            <TextView
                android:id="@+id/current_position"
                android:layout_width="wrap_content"
                android:layout_height="16dp"
                android:layout_marginTop="4dp"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/play_pause_button_frame"
                tools:text="02:30" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/current_position">

                <TextView
                    android:id="@+id/duration_title"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:text="@string/duration"
                    android:textColor="@color/yp_text_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/duration_value"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="02:40" />

                <TextView
                    android:id="@+id/album_title"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:text="@string/album"
                    android:textColor="@color/yp_text_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/duration_title" />

                <TextView
                    android:id="@+id/album_value"
                    style="@style/PlayerInfo"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/player_info_item_height"
                    android:layout_marginStart="8dp"
                    android:ellipsize="end"
                    android:gravity="end|center_vertical"
                    android:singleLine="true"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/album_title"
                    app:layout_constraintTop_toBottomOf="@id/duration_value"
                    tools:text="Some album" />

                <TextView
                    android:id="@+id/year_title"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:text="@string/year"
                    android:textColor="@color/yp_text_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_title" />

                <TextView
                    android:id="@+id/year_value"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/album_value"
                    tools:text="2007" />

                <TextView
                    android:id="@+id/genre_title"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:text="@string/genre"
                    android:textColor="@color/yp_text_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/year_title" />

                <TextView
                    android:id="@+id/genre_value"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/year_value"
                    tools:text="Rock" />

                <TextView
                    android:id="@+id/country_title"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:text="@string/country"
                    android:textColor="@color/yp_text_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genre_title" />

                <TextView
                    android:id="@+id/country_value"
                    style="@style/PlayerInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/player_info_item_height"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/genre_value"
                    tools:text="USA" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlists_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/playlist_bottom_sheet_background"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="400dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="40dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/yp_text_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="19sp" />

        <Button
            android:id="@+id/new_playlist_button"
            style="@style/ListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="28dp"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlists_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="13dp"
            android:layout_marginTop="24dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
